--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "node-todo",
+  "name": "trunums",
   "version": "0.0.0",
   "description": "Project_Trunums",
   "main": "server.js",
   "author": "Scotch",
   "dependencies": {
-    "angularjs": "0.0.1",
+    "angular": "^1.5.7",
+    "angular-ui-bootstrap": "^1.3.3",
+    "angular-ui-router": "^0.3.1",
     "body-parser": "^1.4.3",
     "express": "^4.13.4",
+    "font-awesome": "^4.6.3",
+    "jquery": "^2.2.4",
     "method-override": "^2.1.3",
     "mongoose": "^4.4.12",
     "morgan": "^1.1.1"
