--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "angular-ui-bootstrap": "^1.3.3",
     "angular-ui-router": "^0.3.1",
     "body-parser": "^1.4.3",
+    "bootstrap": "^3.3.6",
     "express": "^4.13.4",
     "font-awesome": "^4.6.3",
     "jquery": "^2.2.4",
